[package]
name = "esp32-s3-wifi"
version = "0.1.0"
authors = ["Roman"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
embassy-net = { version = "0.4.0", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
] }
embassy-net-driver = { version = "0.2" }
embassy-executor = { version = "0.5.0", features = [
  "integrated-timers",
  "nightly",
] }
embassy-time = { version = "0.3" }
embedded-svc = { version = "0.27", default-features = false }
embedded-io = { version = "0.6.1" }
esp32s3-hal = { version = "0.15.0", features = [
  "async",
  "embassy",
  "embassy-executor-thread",
  # "embassy-time-systick",
  "embassy-time-timg0",
] }
esp-backtrace = { version = "0.10.0", features = [
  "esp32s3",
  "panic-handler",
  "exception-handler",
  "print-uart",
] }
esp-println = { version = "0.8.0", features = ["esp32s3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
esp-wifi = { version = "0.3.0", features = [
  "async",
  "embassy-net",
  "esp32s3",
  "wifi",
] }
smoltcp = { version = "0.11.0", default-features = false, features = [
  "proto-igmp",
  "proto-ipv4",
  "socket-tcp",
  "socket-icmp",
  "socket-udp",
  "medium-ethernet",
  "proto-dhcpv4",
  "socket-raw",
  "socket-dhcpv4",
] }
heapless = { version = "0.8", default-features = false }
static_cell = { version = "2.0.0", features = ["nightly"] }
